--- a/Pari e Dispari/index.html
+++ b/Pari e Dispari/index.html
@@ -5,12 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pariDispari</title>
 </head>
 
 <body>
 
+    <form>
+        <select id="pariDispari">
+            <option value="pari">Pari</option>
+            <option value="dispari">Dispari</option>
 
+        </select>
+
+        <select id="numero">
+            <option value=1>1</option>
+            <option value=2>2</option>
+            <option value=3>3</option>
+            <option value=4>4</option>
+            <option value=5>5</option>
+
+
+        </select>
+
+        <button onclick="esegui()">Gioca!</button>
+
+    </form>
 
     <script src="./main.js"></script>
 
